kubedefs/appservice.yaml
apiVersion: v1
kind: Service 
metadata:
  name: vproapp
spec:
  selector:
    app: vproapp
  ports:
    - port: 8080
      targetPort: vproapp-port
      protocol: TCP
  type: ClusterIP
