kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.termms.click
    http:
      paths:
      - path: /
        pathType: prefix
        backend: 
          service: 
            name: vproapp
            port:
              number: 8080
